<resources>
    <string name="app_name">TestInCFT</string>
    <string name="exchange">Курс</string>
    <string name="code">Код:</string>
    <string name="world_currencies">Валюты мира</string>
    <string name="update">Обновить данные</string>
    <string name="data_update">Данные обновлены</string>
    <string name="in_rubles">Введите сумму в рублях:</string>
    <string name="not_converter">не определено</string>
    <string name="get_result">рассчитать</string>
    <string name="need_value">Введите значение</string>
</resources>